add some new page

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -32,6 +32,10 @@
                         <input type="text" class="form-control" id="phone" name="phone" required>
                     </div>
                     <div class="mb-3">
+                        <label for="personal_id" class="form-label">Personal ID</label>
+                        <input type="text" class="form-control" id="personal_id" name="personal_id" required>
+                    </div>
+                    <div class="mb-3">
                         <label class="form-label">Account Type</label>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="role" id="role_renter" value="renter" checked>
