--- a/templates/renter/search.html
+++ b/templates/renter/search.html
@@ -80,7 +80,7 @@
                         <div class="card-footer">
                             <a href="{{ url_for('renter.view_homestay', id=homestay.id) }}" class="btn btn-primary">View Details</a>
                             {% if current_user.is_authenticated and current_user.is_renter() %}
-                            <a href="{{ url_for('renter.book_homestay', id=homestay.id) }}" class="btn btn-outline-primary">Book Now</a>
+                            <a href="{{ url_for('renter.book_homestay', homestay_id=homestay.id) }}" class="btn btn-outline-primary">Book Now</a>
                             {% endif %}
                         </div>
                     </div>
